[#165423082] Fix a couple of spacings that where fixable in text fields

--- a/components/consumer/desktop/hint/style.scss
+++ b/components/consumer/desktop/hint/style.scss
@@ -8,7 +8,7 @@
       @extend .pbg-desktop-small-error;
       &:before {
         content: url('../img/small-error-icon.svg');
-        margin-right: 5px;
+        margin-right: 4px;
         position: relative;
         top: 3px;
       }
